# polynomial-master

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
include/: graphic_lib.h  graphic_mode.h  logic_lib.h  terminal_mode.h
src/: Biblio.h  Biblio_Graphique.h  Console.c  Mode_Graphique.c  Programme_Principale.c  graphic_lib.c  graphic_mode.c  logic_lib.c  main.c  terminal_mode.c
